<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="roganovich.androidlessons.Main"
    tools:showIn="@layout/activity_main"
    android:background="@android:color/background_light">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="29dp"
        android:id="@+id/txtLogin"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="21dp"
        android:hint="@string/hintLogin"
        android:layout_toEndOf="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtPassword"
        android:layout_below="@+id/txtLogin"
        android:layout_alignStart="@+id/txtLogin"
        android:hint="@string/hintPass"
        android:layout_alignEnd="@+id/txtLogin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textStyle="normal|bold"
        android:layout_alignBaseline="@+id/txtLogin"
        android:layout_alignBottom="@+id/txtLogin"
        android:layout_alignParentStart="true"
        android:layout_marginStart="23dp"
        android:text="@string/lblLogin" />

    <TextView
        android:text="@string/lblPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textStyle="normal|bold"
        android:layout_alignBaseline="@+id/txtPassword"
        android:layout_alignBottom="@+id/txtPassword"
        android:layout_alignStart="@+id/textView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/btnLogin"
        android:text="@string/btn"
        android:background="@android:color/holo_blue_dark"
        android:layout_below="@+id/txtPassword"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginStart="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnClear"
        android:text="@string/btnClear"
        android:background="@android:color/holo_green_dark"
        android:layout_alignBaseline="@+id/btnLogin"
        android:layout_alignBottom="@+id/btnLogin"
        android:layout_toEndOf="@+id/btnLogin"
        android:layout_marginStart="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtAuth"
        android:textSize="24sp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/open"
        android:layout_below="@+id/txtAuth"
        android:layout_alignParentStart="true"
        android:id="@+id/imgOpen"
        android:layout_alignParentEnd="true"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/closed"
        android:id="@+id/imgClose"
        android:layout_below="@+id/txtAuth"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
